# snowflake-data-platform

./: .gitattributes  .gitignore  pyproject.toml
src/snowflake_data_platform/config/: __init__.py  constants.py  error_profiles.py  logging_config.py  settings.py
src/snowflake_data_platform/data_generator/: generate_data.py
src/snowflake_data_platform/data_generator/generators/: customers.py
src/snowflake_data_platform/models/: customer.py
src/snowflake_data_platform/utils/: fake_data.py  file_utils.py  id_generator.py
tests/: test_settings.py
