[project]
name = "snowflake-data-platform"
version = "0.1.0"
description = "Production-grade Snowflake data engineering platform with watermark-based incremental loading."
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "faker>=40.28.1",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowflake_data_platform"]